--- a/index.html
+++ b/index.html
@@ -136,9 +136,12 @@
           </div>
         </div>
     </div>
-
+    <br>
     <!-- Agregar video  -->
-     <!-- Agregar formulario -->
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+      <video src="video/soy-programador-el-documental.mp4" class="object-fit-fill" autoplay></video>
+    </div>
+         <!-- Agregar formulario -->
 
     <div class="container">
         <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
